# TJU-latex-docx

./: .gitignore  README.md  pyproject.toml
src/latex_docx_converter/: __init__.py  ai_review_bundle.py  citation.py  converter.py  defaults.py  docx_review.py  gui.py  pandoc_manager.py  scanner.py  tikz_renderer.py  tjuthesis.py  word_postprocess.py
tests/: test_core.py
